[package]
name = "rust-p2p-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
env_logger = "0.9.0"
structopt = "0.3.21"
libp2p = "0.39.1"
async-std = { version = "1.6.2", features = ["attributes"] }